// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsSidebar matches snapshot for no search results 1`] = `
<div
  aria-label="Search results sidebar"
  aria-live="polite"
  className="search-results-bar"
  data-analytics-region="search-results"
  data-search-results-open={true}
  data-testid="search-results-sidebar"
  id="search-results-sidebar"
  onFocus={[Function]}
  style={
    Object {
      "--search-results-bar-z-index": 50,
      "--search-results-bar-z-index-mobile": 50,
    }
  }
  tabIndex={-1}
>
  <div>
    <div
      className="search-results-header search-results-header--empty"
    >
      <h2
        className="search-results-header-title"
        id="search-results-title"
      >
        Search
      </h2>
      <button
        aria-label="Close Search"
        className="close-icon-button"
        data-testid="close-search-noresults"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="close-icon"
          height="15px"
          version="1.1"
          viewBox="0 0 15 15"
          width="15px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              transform="translate(-302.000000, -18.000000)"
            >
              <g
                transform="translate(302.000000, 18.000000)"
              >
                <path
                  d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                />
              </g>
            </g>
          </g>
        </svg>
      </button>
    </div>
    <div
      className="search-query"
      role="status"
    >
      <div
        className="search-query-alignment"
      >
        Sorry, no results found for 
         
        <strong>
           ‘
          cool search
          ’
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchResultsSidebar matches snapshot with related key terms 1`] = `
.c0 {
  list-style: none;
  cursor: pointer;
}

.c0::before {
  display: none;
}

.c0::-moz-list-bullet {
  list-style-type: none;
}

.c0::-webkit-details-marker {
  display: none;
}

<div
  aria-label="Search results sidebar"
  aria-live="polite"
  className="search-results-bar"
  data-analytics-region="search-results"
  data-search-results-open={true}
  data-testid="search-results-sidebar"
  id="search-results-sidebar"
  onFocus={[Function]}
  style={
    Object {
      "--search-results-bar-z-index": 50,
      "--search-results-bar-z-index-mobile": 50,
    }
  }
  tabIndex={-1}
>
  <div
    className="search-results-top-bar"
  >
    <div
      className="search-results-header"
    >
      <h2
        className="search-results-header-title"
        id="search-results-title"
      >
        Search results
      </h2>
      <button
        aria-label="Close Search"
        className="close-icon-button"
        data-testid="close-search"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="close-icon"
          height="15px"
          version="1.1"
          viewBox="0 0 15 15"
          width="15px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              transform="translate(-302.000000, -18.000000)"
            >
              <g
                transform="translate(302.000000, 18.000000)"
              >
                <path
                  d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                />
              </g>
            </g>
          </g>
        </svg>
      </button>
    </div>
    <div
      className="search-query-wrapper"
    >
      <div
        className="search-query"
      >
        <img
          alt=""
          className="search-icon-inside-bar"
          src="search-icon-v2.svg"
        />
        <div
          className="header-query"
          role="note"
          tabIndex={0}
        >
          2 key term results and 1 search result for 
          <strong>
             ‘
            term
            ’
          </strong>
        </div>
      </div>
    </div>
  </div>
  <nav
    aria-labelledby="search-results-title"
    className="nav-wrapper"
  >
    <div
      className="related-key-terms"
      data-analytics-region="kt-search-results"
    >
      <h3
        className="search-results-section-title"
      >
        Related key terms
      </h3>
      <a
        aria-current={true}
        aria-label="test term: test definition with … (Result 1 in Test Page 1)"
        className="section-content-preview section-content-preview--selected"
        data-testid="related-key-term-result"
        href="books/book-slug-1/pages/test-page-1?target=%7B%22index%22%3A0%2C%22type%22%3A%22search%22%7D#test-pair-page1"
        onClick={[Function]}
      >
        <div
          className="key-term-result"
        >
          <span
            className="key-term"
          >
            test term
          </span>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "test definition with …",
              }
            }
          />
        </div>
      </a>
      <a
        aria-current={false}
        aria-label="test term: test definition (Result 1 in Test Page 6 with special characters in url)"
        className="section-content-preview"
        data-testid="related-key-term-result"
        href="books/book-slug-1/pages/10-test-page-6-f%C3%ADsica?target=%7B%22index%22%3A0%2C%22type%22%3A%22search%22%7D#test-pair-page6"
        onClick={[Function]}
      >
        <div
          className="key-term-result"
        >
          <span
            className="key-term"
          >
            test term
          </span>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "test definition",
              }
            }
          />
        </div>
      </a>
    </div>
    <h3
      className="search-results-section-title"
      tabIndex={0}
    >
      Chapter results
    </h3>
    <ol
      className="search-results-ol"
      data-analytics-region="content-search-results"
    >
      <li
        className="list-item"
      >
        <details
          className="details"
          open={true}
        >
          <summary
            className="c0 search-bar-summary"
            tabIndex={0}
          >
            <div
              className="search-bar-summary-container"
              tabIndex={-1}
            >
              <svg
                aria-hidden="true"
                className="details-expand-icon "
                viewBox="0 0 192 512"
              >
                <path
                  d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.403 0 402.48 0 384.662z"
                  fill="currentColor"
                />
              </svg>
              <svg
                aria-hidden="true"
                className="details-collapse-icon "
                viewBox="0 0 320 512"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  fill="currentColor"
                />
              </svg>
              <h3
                className="summary-title"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<span class=\\"os-number\\">12</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 6</span>",
                  }
                }
              />
            </div>
          </summary>
          <ol
            className="details-ol"
          >
            <li
              className="nav-item"
            >
              <div
                className="link-wrapper"
              >
                <h4
                  className="search-results-link"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-text\\">Test Page 7</span>",
                    }
                  }
                />
              </div>
              <a
                aria-current={false}
                aria-label="cool highlight bruh (Result 1 in Test Page 7)"
                className="section-content-preview"
                data-testid="search-result"
                href="books/book-slug-1/pages/12-test-page-7?target=%7B%22index%22%3A0%2C%22type%22%3A%22search%22%7D#fs-id1544727"
                onClick={[Function]}
              >
                <div
                  className="simple-result"
                >
                  <div
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "cool <strong>highlight</strong> bruh",
                      }
                    }
                    tabIndex={-1}
                  />
                </div>
              </a>
            </li>
          </ol>
        </details>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`SearchResultsSidebar matches snapshot with results 1`] = `
.c0 {
  list-style: none;
  cursor: pointer;
}

.c0::before {
  display: none;
}

.c0::-moz-list-bullet {
  list-style-type: none;
}

.c0::-webkit-details-marker {
  display: none;
}

<div
  aria-label="Search results sidebar"
  aria-live="polite"
  className="search-results-bar"
  data-analytics-region="search-results"
  data-search-results-open={true}
  data-testid="search-results-sidebar"
  id="search-results-sidebar"
  onFocus={[Function]}
  style={
    Object {
      "--search-results-bar-z-index": 50,
      "--search-results-bar-z-index-mobile": 50,
    }
  }
  tabIndex={-1}
>
  <div
    className="search-results-top-bar"
  >
    <div
      className="search-results-header"
    >
      <h2
        className="search-results-header-title"
        id="search-results-title"
      >
        Search results
      </h2>
      <button
        aria-label="Close Search"
        className="close-icon-button"
        data-testid="close-search"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="close-icon"
          height="15px"
          version="1.1"
          viewBox="0 0 15 15"
          width="15px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              transform="translate(-302.000000, -18.000000)"
            >
              <g
                transform="translate(302.000000, 18.000000)"
              >
                <path
                  d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                />
              </g>
            </g>
          </g>
        </svg>
      </button>
    </div>
    <div
      className="search-query-wrapper"
    >
      <div
        className="search-query"
      >
        <img
          alt=""
          className="search-icon-inside-bar"
          src="search-icon-v2.svg"
        />
        <div
          className="header-query"
          role="note"
          tabIndex={0}
        >
          3 search results for 
          <strong>
             ‘
            cool search
            ’
          </strong>
        </div>
      </div>
    </div>
  </div>
  <nav
    aria-labelledby="search-results-title"
    className="nav-wrapper"
  >
    <ol
      className="search-results-ol"
      data-analytics-region="content-search-results"
    >
      <li
        className="nav-item"
      >
        <div
          className="link-wrapper"
        >
          <h4
            className="search-results-link"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<span class=\\"os-text\\">Test Page 1</span>",
              }
            }
          />
        </div>
        <a
          aria-current={true}
          aria-label="cool highlight bruh (Result 1 in Test Page 1)"
          className="section-content-preview section-content-preview--selected"
          data-testid="search-result"
          href="books/book-slug-1/pages/test-page-1?query=cool%20search&target=%7B%22index%22%3A0%2C%22type%22%3A%22search%22%7D#fs-id1544727"
          onClick={[Function]}
        >
          <div
            className="simple-result"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "cool <strong>highlight</strong> bruh",
                }
              }
              tabIndex={-1}
            />
          </div>
        </a>
      </li>
      <li
        className="list-item"
      >
        <details
          className="details"
          open={true}
        >
          <summary
            className="c0 search-bar-summary"
            tabIndex={0}
          >
            <div
              className="search-bar-summary-container"
              tabIndex={-1}
            >
              <svg
                aria-hidden="true"
                className="details-expand-icon "
                viewBox="0 0 192 512"
              >
                <path
                  d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.403 0 402.48 0 384.662z"
                  fill="currentColor"
                />
              </svg>
              <svg
                aria-hidden="true"
                className="details-collapse-icon "
                viewBox="0 0 320 512"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  fill="currentColor"
                />
              </svg>
              <h3
                className="summary-title"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<span class=\\"os-number\\">10</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 5</span>",
                  }
                }
              />
            </div>
          </summary>
          <ol
            className="details-ol"
          >
            <li
              className="nav-item"
            >
              <div
                aria-label="Current Page"
                className="link-wrapper"
              >
                <h4
                  className="search-results-link"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-text\\">Test Page 6 with special characters in url</span>",
                    }
                  }
                />
              </div>
              <a
                aria-current={false}
                aria-label="cool highlight bruh (Result 1 in Test Page 6 with special characters in url)"
                className="section-content-preview"
                data-testid="search-result"
                href="books/book-slug-1/pages/10-test-page-6-f%C3%ADsica?query=cool%20search&target=%7B%22index%22%3A0%2C%22type%22%3A%22search%22%7D#fs-id1544727"
                onClick={[Function]}
              >
                <div
                  className="simple-result"
                >
                  <div
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "cool <strong>highlight</strong> bruh",
                      }
                    }
                    tabIndex={-1}
                  />
                </div>
              </a>
            </li>
          </ol>
        </details>
      </li>
      <li
        className="list-item"
      >
        <details
          className="details"
          open={true}
        >
          <summary
            className="c0 search-bar-summary"
            tabIndex={0}
          >
            <div
              className="search-bar-summary-container"
              tabIndex={-1}
            >
              <svg
                aria-hidden="true"
                className="details-expand-icon "
                viewBox="0 0 192 512"
              >
                <path
                  d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.403 0 402.48 0 384.662z"
                  fill="currentColor"
                />
              </svg>
              <svg
                aria-hidden="true"
                className="details-collapse-icon "
                viewBox="0 0 320 512"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  fill="currentColor"
                />
              </svg>
              <h3
                className="summary-title"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<span class=\\"os-number\\">12</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 6</span>",
                  }
                }
              />
            </div>
          </summary>
          <ol
            className="details-ol"
          >
            <li
              className="nav-item"
            >
              <div
                className="link-wrapper"
              >
                <h4
                  className="search-results-link"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-text\\">Test Page 7</span>",
                    }
                  }
                />
              </div>
              <a
                aria-current={false}
                aria-label="cool highlight bruh (Result 1 in Test Page 7)"
                className="section-content-preview"
                data-testid="search-result"
                href="books/book-slug-1/pages/12-test-page-7?query=cool%20search&target=%7B%22index%22%3A0%2C%22type%22%3A%22search%22%7D#fs-id1544727"
                onClick={[Function]}
              >
                <div
                  className="simple-result"
                >
                  <div
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "cool <strong>highlight</strong> bruh",
                      }
                    }
                    tabIndex={-1}
                  />
                </div>
              </a>
            </li>
          </ol>
        </details>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`SearchResultsSidebar shows sidebar with loading state if there is a search 1`] = `
.c0 {
  enable-background: new 0 0 57.6 39.1;
  -webkit-animation: iuEIAH 0.3s forwards 300ms;
  animation: iuEIAH 0.3s forwards 300ms;
  display: block;
  height: 100%;
  margin: 0 auto;
  opacity: 0;
  position: relative;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  width: 5rem;
}

.c0 * {
  -webkit-animation: fadeIn 0.3s forwards;
  animation: fadeIn 0.3s forwards;
}

.c0 .os-green,
.c0 .os-orange,
.c0 .os-gray,
.c0 .os-yellow,
.c0 .os-blue {
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.c0 .os-green {
  -webkit-animation: hkCfKg 0.6s cubic-bezier(0.81,0.41,0.13,0.74) 0.5s infinite alternate;
  animation: hkCfKg 0.6s cubic-bezier(0.81,0.41,0.13,0.74) 0.5s infinite alternate;
  -webkit-transform-origin: center left;
  -ms-transform-origin: center left;
  transform-origin: center left;
}

.c0 .os-orange {
  -webkit-animation: kSacDd 0.6s cubic-bezier(0.81,0.41,0.13,0.74) 0.5s infinite alternate;
  animation: kSacDd 0.6s cubic-bezier(0.81,0.41,0.13,0.74) 0.5s infinite alternate;
  -webkit-transform-origin: center right;
  -ms-transform-origin: center right;
  transform-origin: center right;
}

.c0 .os-gray {
  -webkit-animation: fXlVAV 0.6s cubic-bezier(0.81,0.41,0.13,0.74) 0.5s infinite alternate;
  animation: fXlVAV 0.6s cubic-bezier(0.81,0.41,0.13,0.74) 0.5s infinite alternate;
  -webkit-transform-origin: center right;
  -ms-transform-origin: center right;
  transform-origin: center right;
}

.c0 .os-yellow {
  -webkit-animation: hbytGi 0.6s cubic-bezier(0.81,0.41,0.13,0.74) 0.6s infinite alternate;
  animation: hbytGi 0.6s cubic-bezier(0.81,0.41,0.13,0.74) 0.6s infinite alternate;
  -webkit-transform-origin: center right;
  -ms-transform-origin: center right;
  transform-origin: center right;
}

.c0 .os-blue {
  -webkit-animation: jfsUaa 0.6s cubic-bezier(0.81,0.41,0.13,0.74) 0.5s infinite alternate;
  animation: jfsUaa 0.6s cubic-bezier(0.81,0.41,0.13,0.74) 0.5s infinite alternate;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<div
  aria-label="Search results sidebar"
  aria-live="polite"
  className="search-results-bar"
  data-analytics-region="search-results"
  data-search-results-open={true}
  data-testid="search-results-sidebar"
  id="search-results-sidebar"
  onFocus={[Function]}
  style={
    Object {
      "--search-results-bar-z-index": 50,
      "--search-results-bar-z-index-mobile": 50,
    }
  }
  tabIndex={-1}
>
  <div
    aria-label="Loading results"
    className="loading-wrapper"
  >
    <div
      className="close-icon-wrapper"
    >
      <button
        aria-label="Close Search"
        className="close-icon-button"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="close-icon"
          height="15px"
          version="1.1"
          viewBox="0 0 15 15"
          width="15px"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="1"
          >
            <g
              fill="currentColor"
              transform="translate(-302.000000, -18.000000)"
            >
              <g
                transform="translate(302.000000, 18.000000)"
              >
                <path
                  d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                />
              </g>
            </g>
          </g>
        </svg>
      </button>
    </div>
    <svg
      className="c0"
      data-testid="loader"
      id="Layer_1"
      version="1.1"
      viewBox="0 0 57.6 39.1"
      x="0px"
      y="0px"
    >
      <path
        className="os-blue"
        d="M38.4,22c0,0.4-0.3,0.7-0.7,0.7H13.5c-0.4,0-0.7-0.3-0.7-0.7v-1.4c0-0.4,0.3-0.7,0.7-0.7h24.2 c0.4,0,0.7,0.3,0.7,0.7V22z"
        id="os-blue"
        style={
          Object {
            "fill": "#00246a",
          }
        }
      />
      <path
        className="os-yellow"
        d="M41.8,17.8c0,0.4-0.3,0.7-0.7,0.7l-25.4,0.8c-0.4,0-0.7-0.3-0.7-0.7l-0.1-2.1 c0-0.4,0.3-0.7,0.7-0.7L41,15c0.4,0,0.7,0.3,0.7,0.7L41.8,17.8z"
        id="os-yellow"
        style={
          Object {
            "fill": "#f4d019",
          }
        }
      />
      <path
        className="os-gray"
        d="M34.8,14c0,0.4-0.3,0.7-0.7,0.7H11.6c-0.4,0-0.7-0.3-0.7-0.7v-3.5c0-0.4,0.3-0.7,0.7-0.7h22.5 c0.4,0,0.7,0.3,0.7,0.7V14z"
        id="os-gray"
        style={
          Object {
            "fill": "#5e6062",
          }
        }
      />
      <path
        className="os-orange"
        d="M39,8.1c0,0.3-0.4,0.5-1,0.5H8.6c-0.5,0-1-0.2-1-0.5V6.9c0-0.3,0.4-0.5,1-0.5H38 c0.5,0,1,0.2,1,0.5V8.1z"
        id="os-orange"
        style={
          Object {
            "fill": "#f47641",
          }
        }
      />
      <path
        className="os-green"
        d="M43.9,5c0,0.7-0.6,1.2-1.2,1.1L15,4.8c-0.7,0-1.2-0.6-1.1-1.2L14,1.1c0-0.7,0.6-1.2,1.2-1.1 l27.7,1.3c0.7,0,1.2,0.6,1.1,1.2L43.9,5z"
        id="os-green"
        style={
          Object {
            "fill": "#77af42",
          }
        }
      />
      <path
        className="os-type"
        d="M3.1,30.2c-1.8,0-3.1,1.3-3.1,3.1c0,1.8,1.3,3.1,3.1,3.1c1.8,0,3.1-1.3,3.1-3.1 C6.2,31.5,4.9,30.2,3.1,30.2z M3.1,35.7c-1.4,0-2.3-1.1-2.3-2.4c0-1.3,0.9-2.4,2.3-2.4c1.4,0,2.3,1.1,2.3,2.4 C5.4,34.6,4.5,35.7,3.1,35.7z M10.9,30.2c-0.9,0-1.9,0.4-2.4,1.2h0v-1H7.7v8.8h0.8v-3.9h0C9,36,10,36.4,10.9,36.4 c1.8,0,3.1-1.3,3.1-3.1C14,31.5,12.7,30.2,10.9,30.2z M10.9,35.7c-1.4,0-2.5-1.1-2.5-2.4c0-1.3,1.1-2.4,2.5-2.4 c1.4,0,2.3,1.1,2.3,2.4C13.2,34.6,12.3,35.7,10.9,35.7z M18.3,30.2c-1.7,0-2.9,1.3-2.9,3.1c0,1.8,1.2,3.1,3,3.1c1,0,2-0.4,2.6-1.3 l-0.6-0.5c-0.4,0.6-1.2,1-2,1c-1.8,0-2.2-1.6-2.2-2.2h5v-0.5C21.1,31.6,20.1,30.2,18.3,30.2z M16.1,32.8c0-0.3,0.5-1.9,2.1-1.9 c1.1,0,2,0.9,2,1.9H16.1z M27.9,32.7v3.5h-0.8v-3.5c0-1-0.3-1.9-1.5-1.9c-1.1,0-2,0.8-2,2.4v2.9h-0.8V32c0-0.4-0.1-1.4-0.1-1.7h0.8 c0,0.4,0,0.9,0.1,1h0c0.3-0.7,1.1-1.2,2-1.2C27.4,30.2,27.9,31.4,27.9,32.7z M34.2,34.4c0,1.5-1.4,2-2.6,2c-0.9,0-1.8-0.2-2.4-0.9 l1-1c0.4,0.4,0.8,0.8,1.5,0.8c0.4,0,1-0.2,1-0.7c0-1.3-3.3-0.3-3.3-2.6c0-1.4,1.2-2,2.5-2c0.8,0,1.7,0.3,2.2,0.9l-1,0.9 c-0.3-0.4-0.7-0.6-1.2-0.6c-0.4,0-0.9,0.2-0.9,0.7C30.9,32.9,34.2,32,34.2,34.4z M37.5,30.1h1.7v1.3h-1.7v2.7c0,0.6,0.2,1,0.9,1 c0.3,0,0.6-0.1,0.8-0.2v1.3c-0.3,0.2-0.9,0.2-1.2,0.2c-1.6,0-2-0.7-2-2.2v-2.8h-1.3v-1.3H36v-1.8h1.5V30.1z M43,30 c-1,0-1.9,0.3-2.6,1l0.8,0.8c0.4-0.4,1-0.6,1.6-0.6c0.8,0,1.4,0.4,1.4,1.1v0.2h-0.4c-1.5,0-3.9,0.1-3.9,2.1c0,1.2,1.1,1.8,2.2,1.8 c0.8,0,1.5-0.3,2-1h0v0.8h1.4v-3.5C45.6,31.8,45.6,30,43,30z M44.1,33.8c0,0.9-0.5,1.4-1.5,1.4c-0.5,0-1.1-0.2-1.1-0.8 c0-0.9,1.5-0.9,2.3-0.9h0.3V33.8z M50.8,32.9l2.5,3.3h-1.9L49.8,34l-1.6,2.2h-1.8l2.5-3.3l-2.1-2.8h1.9l1.2,1.8l1.3-1.8h1.7 L50.8,32.9z M57.6,30.1v1.7h-0.3v-1.5h0l-0.6,1.5h-0.2l-0.6-1.5h0v1.5h-0.3v-1.7h0.4l0.5,1.3l0.5-1.3H57.6z M53.9,30.1h1.4v0.3h-0.5 v1.5h-0.3v-1.5h-0.5V30.1z"
        id="os-type"
        style={
          Object {
            "fill": "#5e6062",
          }
        }
      />
    </svg>
  </div>
</div>
`;
